<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="256dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/avatar" />

    <TextView
        style="@style/tvStyleAbout"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="315dp"
        android:text="@string/app_name" />

    <TextView
        style="@style/tvStyleAbout"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="365dp"
        android:text="@string/author" />

    <TextView
        style="@style/tvStyleAbout"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="415dp"
        android:textIsSelectable="true"
        android:text="@string/name" />

    <TextView
        style="@style/tvStyleAbout"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="465dp"
        android:textIsSelectable="true"
        android:autoLink="email"
        android:text="@string/email" />


</RelativeLayout>